--- a/Thorne_rapids_data.Rmd
+++ b/Thorne_rapids_data.Rmd
@@ -2,7 +2,10 @@
 title: "Thorne Rapids Data"
 author: "Brooke Rose"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
-output: html_document
+output:
+  html_document:
+    theme: journal
+    highlight: espresso
 ---
 
 ```{r setup, include=FALSE}
